--- a/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
+++ b/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
@@ -1,12 +1,24 @@
-﻿<Window x:Class="Ruminoid.Trimmer.Shell.Windows.MainWindow"
+﻿<controls:MetroWindow x:Class="Ruminoid.Trimmer.Shell.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Ruminoid.Trimmer.Shell.Windows"
+        xmlns:chrome="http://schemes.grabacr.net/winfx/2014/chrome"
+        xmlns:controls="http://schemes.grabacr.net/winfx/2014/controls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        FontFamily="Segoe UI"
+        Background="{DynamicResource ThemeBrushKey}"
+        Foreground="White"
+        WindowState="Maximized"
+        UseLayoutRounding="True"
+        IsRestoringWindowPlacement="True"
+        TextOptions.TextFormattingMode="Display"
+        SnapsToDevicePixels="True" Height="720" Width="1280"
+        Title="NEUTRINO Studio"
+        MinHeight="720" MinWidth="1280" WindowStartupLocation="CenterScreen" 
+        Icon="/Ruminoid.Trimmer.Shell;component/Assets/logo_v1.ico">
     <Grid>
         
     </Grid>
-</Window>
+</controls:MetroWindow>
