--- a/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
+++ b/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:Ruminoid.Trimmer.Shell.Windows"
         xmlns:chrome="http://schemes.grabacr.net/winfx/2014/chrome"
         xmlns:controls="http://schemes.grabacr.net/winfx/2014/controls"
+        xmlns:yDock="clr-namespace:YDock;assembly=YDock"
+        xmlns:commands="clr-namespace:Ruminoid.Trimmer.Shell.Commands"
+        xmlns:visualIcon="clr-namespace:VisualIcon;assembly=VisualIcon"
         mc:Ignorable="d"
         FontFamily="Segoe UI"
         Background="{DynamicResource ThemeBrushKey}"
@@ -15,10 +18,81 @@
         IsRestoringWindowPlacement="True"
         TextOptions.TextFormattingMode="Display"
         SnapsToDevicePixels="True" Height="720" Width="1280"
-        Title="NEUTRINO Studio"
+        Title="Trimmer"
         MinHeight="720" MinWidth="1280" WindowStartupLocation="CenterScreen" 
         Icon="/Ruminoid.Trimmer.Shell;component/Assets/logo_v1.ico">
+
+    <chrome:WindowChrome.Instance>
+        <chrome:WindowChrome>
+        </chrome:WindowChrome>
+    </chrome:WindowChrome.Instance>
+
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="23" />
+        </Grid.RowDefinitions>
+
+        <Border Grid.Row="0" controls:MetroWindow.IsCaptionBar="True" Height="0"/>
+
+        <Border Grid.Row="0" x:Name="WndCaption">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <controls:CaptionIcon x:Name="Wnd1" Grid.Column="0" Padding="8,6,4,6" VerticalAlignment="Center">
+                    <visualIcon:Icon Width="20" Height="20" Type="Assembly" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                </controls:CaptionIcon>
+                <Menu x:Name="Wnd2" Grid.Column="1" Background="{x:Null}" Foreground="White"
+                      VerticalAlignment="Center" HorizontalAlignment="Left">
+                    <MenuItem Header="文件(_F)">
+                        <MenuItem Command="New" Foreground="#FF212121"/>
+                        <MenuItem Command="Open" Foreground="#FF212121"/>
+                        <MenuItem Command="Close" Foreground="#FF212121"/>
+                        <Separator/>
+                        <MenuItem Command="{x:Static commands:UICommands.ExitApp}" Foreground="#FF212121"/>
+                    </MenuItem>
+                    <MenuItem Header="编辑(_E)">
+                        <MenuItem Command="Undo" Foreground="#FF212121"/>
+                        <MenuItem Command="Redo" Foreground="#FF212121"/>
+                        <Separator/>
+                        <MenuItem Command="Cut" Foreground="#FF212121"/>
+                        <MenuItem Command="Copy" Foreground="#FF212121"/>
+                        <MenuItem Command="Paste" Foreground="#FF212121"/>
+                        <Separator/>
+                        <MenuItem Command="Find" Foreground="#FF212121"/>
+                        <MenuItem Command="Replace" Foreground="#FF212121"/>
+                    </MenuItem>
+                    <MenuItem Header="帮助(_F)">
+                        <MenuItem Command="Help" Foreground="#FF212121"/>
+                        <Separator/>
+                        <MenuItem Header="关于(_A)" Foreground="#FF212121"/>
+                    </MenuItem>
+                </Menu>
+                <Grid Grid.Column="2" HorizontalAlignment="Left" Margin="12,2"
+                      Background="{DynamicResource BackgroundBrushKey}" VerticalAlignment="Center">
+                    <TextBlock Text="Trimmer" Margin="8,4" FontWeight="Medium"/>
+                </Grid>
+                <controls:SystemButtons Grid.Column="3" x:Name="Wnd3"
+                                        VerticalAlignment="Top" />
+            </Grid>
+        </Border>
+
+        <Grid Grid.Row="1" Margin="0">
+            <yDock:DockManager x:Name="DockManager" Margin="0"/>
+        </Grid>
+
+        <Grid Grid.Row="2"
+			  Background="{DynamicResource AccentBrushKey}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <controls:ResizeGrip Grid.Column="1" />
+        </Grid>
     </Grid>
 </controls:MetroWindow>
