--- a/Ruminoid.Trimmer.Shell/Views/TextEditorView.xaml
+++ b/Ruminoid.Trimmer.Shell/Views/TextEditorView.xaml
@@ -5,13 +5,20 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ruminoid.Trimmer.Shell.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             FontFamily="Segoe UI"
+             Background="{DynamicResource ThemeBrushKey}"
+             Foreground="White"
+             UseLayoutRounding="True"
+             TextOptions.TextFormattingMode="Display"
+             SnapsToDevicePixels="True">
     <Grid>
         <avalonEdit:TextEditor
             xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
             SyntaxHighlighting="Lrc"
             VerticalScrollBarVisibility="Auto"
             HorizontalScrollBarVisibility="Auto"
-            ShowLineNumbers="True"/>
+            ShowLineNumbers="True" Background="{x:Null}"
+            Foreground="White" LineNumbersForeground="White"/>
     </Grid>
 </UserControl>
