--- a/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
+++ b/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
@@ -1,4 +1,4 @@
-<controls:MetroWindow x:Class="Ruminoid.Trimmer.Shell.Windows.MainWindow"
+﻿<controls:MetroWindow x:Class="Ruminoid.Trimmer.Shell.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -36,7 +36,7 @@
 
         <Border Grid.Row="0" controls:MetroWindow.IsCaptionBar="True" Height="0"/>
 
-        <Border Grid.Row="0" x:Name="WndCaption" Height="32" VerticalAlignment="Top">
+        <Border Grid.Row="0" Height="32" VerticalAlignment="Top">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
@@ -90,7 +90,7 @@
             </Grid.ColumnDefinitions>
 
             <Grid Margin="0,32,0,0">
-                <ToolBarTray VerticalAlignment="Center" Background="{x:Null}">
+                <ToolBarTray VerticalAlignment="Center" Background="{x:Null}" Name="Wnd6" HorizontalAlignment="Left">
                     <ToolBar Background="{x:Null}" Loaded="ToolBar_RemoveGrid">
                         <Button Margin="3">
                             <visualIcon:Icon Type="NewFile" Margin="3"/>
@@ -108,7 +108,7 @@
                 </ToolBarTray>
             </Grid>
 
-            <StackPanel Grid.Column="1" HorizontalAlignment="Center" Orientation="Horizontal">
+            <StackPanel Grid.Column="1" HorizontalAlignment="Center" Orientation="Horizontal" Name="WndCaption">
                 <Border BorderBrush="{DynamicResource BorderBrushKey}" BorderThickness="1">
                     <Grid Background="{DynamicResource BackgroundBrushKey}">
                         <StackPanel Margin="6,0" VerticalAlignment="Center" Orientation="Horizontal">
@@ -130,7 +130,7 @@
                     </Grid>
                 </Border>
                 <ToggleButton HorizontalAlignment="Right" VerticalAlignment="Bottom"
-                        Height="80" Width="80" Padding="0">
+                        Height="80" Width="80" Padding="0" Name="Wnd4">
                     <Grid Height="80" Width="80">
                         <visualIcon:Icon Type="Run" Width="35" Height="35" Size="2"
                                          HorizontalAlignment="Left" VerticalAlignment="Top" Margin="4,0"/>
@@ -139,7 +139,7 @@
                     </Grid>
                 </ToggleButton>
                 <ToggleButton HorizontalAlignment="Right" VerticalAlignment="Bottom"
-                        Height="80" Width="80" Padding="0">
+                        Height="80" Width="80" Padding="0" Name="Wnd5">
                     <Grid Height="80" Width="80">
                         <visualIcon:Icon Type="Timeline" Width="35" Height="35" Size="2"
                                          HorizontalAlignment="Left" VerticalAlignment="Top" Margin="4,0"/>
