--- a/Ruminoid.Trimmer.Shell/Views/TextEditorView.xaml
+++ b/Ruminoid.Trimmer.Shell/Views/TextEditorView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ruminoid.Trimmer.Shell.Views"
+             xmlns:helpers="clr-namespace:Ruminoid.Trimmer.Shell.Helpers"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              FontFamily="Segoe UI"
@@ -14,11 +15,16 @@
              SnapsToDevicePixels="True">
     <Grid>
         <avalonEdit:TextEditor
+            Name="Editor"
             xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
             SyntaxHighlighting="Lrc"
             VerticalScrollBarVisibility="Auto"
             HorizontalScrollBarVisibility="Auto"
-            ShowLineNumbers="True" Background="{x:Null}"
-            Foreground="White" LineNumbersForeground="White"/>
+            Background="{x:Null}"
+            Foreground="White" LineNumbersForeground="White"
+            DataContext="{x:Static helpers:ConfigHelper.Current}"
+            FontSize="{Binding EditorFontSize}"
+            WordWrap="{Binding EditorWordWrap}"
+            ShowLineNumbers="{Binding EditorShowLineNumbers}"/>
     </Grid>
 </UserControl>
