feat: Add Tooltips in ToolBar

--- a/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
+++ b/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<controls:MetroWindow x:Class="Ruminoid.Trimmer.Shell.Windows.MainWindow"
+<controls:MetroWindow x:Class="Ruminoid.Trimmer.Shell.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -108,7 +108,7 @@
                         <Button Margin="3">
                             <visualIcon:Icon Type="OpenFile" Margin="3"/>
                         </Button>-->
-                        <Button Command="Save" Margin="3">
+                        <Button Command="Save" Margin="3" ToolTip="保存 (Ctrl+S)">
                             <visualIcon:Icon Type="Save" Margin="3"/>
                         </Button>
                         <!--<Button Margin="3">
@@ -116,15 +116,15 @@
                         </Button>-->
                     </ToolBar>
                     <ToolBar Background="{x:Null}" Loaded="ToolBar_RemoveGrid">
-                        <Button Command="{x:Static commands:UICommands.AddLyrics}" Margin="3">
+                        <Button Command="{x:Static commands:UICommands.AddLyrics}" Margin="3" ToolTip="加载歌词... (Ctrl+T)">
                             <visualIcon:Icon Type="AddComment" Margin="3"/>
                         </Button>
-                        <Button Command="{x:Static commands:UICommands.EditCurrentLine}" Margin="3">
+                        <Button Command="{x:Static commands:UICommands.EditCurrentLine}" Margin="3" ToolTip="编辑当前行... (Ctrl+空格)">
                             <visualIcon:Icon Type="EditConversation" Margin="3"/>
                         </Button>
                     </ToolBar>
                     <ToolBar Background="{x:Null}" Loaded="ToolBar_RemoveGrid">
-                        <Button Command="{x:Static commands:UICommands.LoadMedia}" Margin="3">
+                        <Button Command="{x:Static commands:UICommands.LoadMedia}" Margin="3" ToolTip="加载媒体 (Ctrl+L)">
                             <visualIcon:Icon Type="Media" Margin="3"/>
                         </Button>
                     </ToolBar>
