--- a/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
+++ b/Ruminoid.Trimmer.Shell/Windows/MainWindow.xaml
@@ -1,4 +1,4 @@
-<controls:MetroWindow x:Class="Ruminoid.Trimmer.Shell.Windows.MainWindow"
+﻿<controls:MetroWindow x:Class="Ruminoid.Trimmer.Shell.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -72,6 +72,10 @@
                         <MenuItem Command="{x:Static commands:UICommands.AddLyrics}" Foreground="#FF212121"/>
                         <MenuItem Command="{x:Static commands:UICommands.EditCurrentLine}" Foreground="#FF212121"/>
                     </MenuItem>
+                    <MenuItem Header="视图(_V)">
+                        <MenuItem Command="{x:Static commands:UICommands.ShowLyricsEditorView}" Foreground="#FF212121"/>
+                        <MenuItem Command="{x:Static commands:UICommands.ShowPlaybackView}" Foreground="#FF212121"/>
+                    </MenuItem>
                     <MenuItem Header="回放(_P)">
                         <MenuItem Command="{x:Static commands:UICommands.LoadMedia}" Foreground="#FF212121"/>
                         <MenuItem Command="{x:Static commands:UICommands.Playback}" Foreground="#FF212121"/>
@@ -114,6 +118,14 @@
                         <!--<Button Margin="3">
                             <visualIcon:Icon Type="ExportScript" Margin="3"/>
                         </Button>-->
+                    </ToolBar>
+                    <ToolBar Background="{x:Null}" Loaded="ToolBar_RemoveGrid">
+                        <Button Command="{x:Static commands:UICommands.ShowLyricsEditorView}" Margin="3" ToolTip="编辑 (F3)">
+                            <visualIcon:Icon Type="Timeline" Margin="3"/>
+                        </Button>
+                        <Button Command="{x:Static commands:UICommands.ShowPlaybackView}" Margin="3" ToolTip="回放 (F4)">
+                            <visualIcon:Icon Type="PlaybackPreview" Margin="3"/>
+                        </Button>
                     </ToolBar>
                     <ToolBar Background="{x:Null}" Loaded="ToolBar_RemoveGrid">
                         <Button Command="{x:Static commands:UICommands.AddLyrics}" Margin="3" ToolTip="加载歌词... (Ctrl+T)">
