--- a/Ruminoid.Trimmer.Shell/Views/PlaybackView.xaml
+++ b/Ruminoid.Trimmer.Shell/Views/PlaybackView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ruminoid.Trimmer.Shell.Views"
+             xmlns:wpf="clr-namespace:LibVLCSharp.WPF;assembly=LibVLCSharp.WPF"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              FontFamily="Segoe UI"
@@ -14,6 +15,6 @@
              SnapsToDevicePixels="True"
              Name="RootElement">
     <Grid>
-
+        <wpf:VideoView x:Name="VideoView"/>
     </Grid>
 </UserControl>
