--- a/Ruminoid.Trimmer.Shell/Views/LyricEditorView.xaml
+++ b/Ruminoid.Trimmer.Shell/Views/LyricEditorView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ruminoid.Trimmer.Shell.Views"
              xmlns:models="clr-namespace:Ruminoid.Trimmer.Shell.Models"
+             xmlns:visualIcon="clr-namespace:VisualIcon;assembly=VisualIcon"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              FontFamily="Segoe UI"
@@ -50,52 +51,108 @@
             </StackPanel.Style>
         </StackPanel>
 
-        <ListView Background="{x:Null}" Foreground="White" Name="RootView"
+        <ListView  Background="{x:Null}" Foreground="White" Name="RootView"
                   DataContext="{x:Static models:LrcModel.Current}"
                   ItemsSource="{Binding Items}"
-                  SelectionMode="Single">
+                  SelectionMode="Single"
+                  HorizontalContentAlignment="Stretch"
+                  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid>
-                            <ListView  Background="{x:Null}" Foreground="White"
+                    <Grid Width="{Binding ElementName=RootView, Path=ActualWidth}">
+                        <Grid Margin="0,4,20,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid>
+                                <ListView Background="#55000000"
                                        ItemsSource="{Binding Items}"
-                                       SelectionMode="Single">
-                                <ListView.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <WrapPanel/>
-                                    </ItemsPanelTemplate>
-                                </ListView.ItemsPanel>
-                                <ListView.ItemTemplate>
-                                    <DataTemplate>
-                                        <Grid>
-                                            <TextBlock Text="{Binding Char}"
-                                                       FontSize="36" FontWeight="Bold">
-                                                <TextBlock.Style>
-                                                    <Style TargetType="TextBlock">
-                                                        <Setter Property="Foreground" Value="White"/>
-                                                        <Style.Triggers>
-                                                            <DataTrigger Binding="{Binding IsCompleted}">
-                                                                <Setter Property="Foreground" Value="LawnGreen"/>
-                                                            </DataTrigger>
-                                                            <DataTrigger Binding="{Binding IsModified}">
-                                                                <Setter Property="Foreground" Value="{DynamicResource AccentBrushKey}"/>
-                                                            </DataTrigger>
-                                                        </Style.Triggers>
-                                                    </Style>
-                                                </TextBlock.Style>
-                                            </TextBlock>
-                                        </Grid>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                            </ListView>
-                        </Grid>
-                        <Grid Grid.Column="1">
-                            <TextBlock Text="SHOULD AT RIGHT"/>
+                                       SelectionMode="Single"
+                                       BorderBrush="{x:Null}"
+                                       ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                                       ScrollViewer.CanContentScroll="True"
+                                       ScrollViewer.PanningMode="HorizontalOnly"
+                                       ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                                    <ListView.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <WrapPanel/>
+                                        </ItemsPanelTemplate>
+                                    </ListView.ItemsPanel>
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <StackPanel Orientation="Horizontal">
+                                                <Grid Background="White"
+                                                  Width="2" Height="20"
+                                                  Margin="4,18,3,0">
+                                                    <Grid.Style>
+                                                        <Style TargetType="Grid">
+                                                            <Setter Property="Opacity" Value="0.1"/>
+                                                            <Style.Triggers>
+                                                                <DataTrigger Binding="{Binding IsTargeting}" Value="True">
+                                                                    <Setter Property="Opacity" Value="1"></Setter>
+                                                                </DataTrigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </Grid.Style>
+                                                </Grid>
+                                                <StackPanel>
+                                                    <StackPanel Opacity="0.3" Orientation="Horizontal">
+                                                        <StackPanel.Resources>
+                                                            <Style x:Key="TcText" TargetType="TextBlock">
+                                                                <Setter Property="FontSize" Value="10"/>
+                                                                <Setter Property="Foreground" Value="White"/>
+                                                                <Setter Property="HorizontalAlignment" Value="Center"/>
+                                                            </Style>
+                                                        </StackPanel.Resources>
+                                                        <StackPanel.Style>
+                                                            <Style TargetType="StackPanel">
+                                                                <Setter Property="Visibility" Value="Hidden"/>
+                                                                <Style.Triggers>
+                                                                    <DataTrigger Binding="{Binding IsCompleted}" Value="True">
+                                                                        <Setter Property="Visibility" Value="Visible"></Setter>
+                                                                    </DataTrigger>
+                                                                </Style.Triggers>
+                                                            </Style>
+                                                        </StackPanel.Style>
+                                                        <TextBlock Style="{StaticResource TcText}" Text="{Binding Position.MinuteDisplay, Mode=OneWay}"/>
+                                                        <TextBlock Style="{StaticResource TcText}" Text=":"/>
+                                                        <TextBlock Style="{StaticResource TcText}" Text="{Binding Position.SecondDisplay, Mode=OneWay}"/>
+                                                        <TextBlock Style="{StaticResource TcText}" Text="."/>
+                                                        <TextBlock Style="{StaticResource TcText}" Text="{Binding Position.TimeCodeDisplay, Mode=OneWay}"/>
+                                                    </StackPanel>
+                                                    <TextBlock Text="{Binding Char}"
+                                                           FontSize="36" FontWeight="Bold">
+                                                        <TextBlock.Style>
+                                                            <Style TargetType="TextBlock">
+                                                                <Setter Property="Foreground" Value="#55FFFFFF"/>
+                                                                <Style.Triggers>
+                                                                    <DataTrigger Binding="{Binding IsCompleted}" Value="True">
+                                                                        <Setter Property="Foreground" Value="Green"/>
+                                                                    </DataTrigger>
+                                                                    <DataTrigger Binding="{Binding IsTargeting}" Value="True">
+                                                                        <Setter Property="Foreground" Value="LawnGreen"/>
+                                                                    </DataTrigger>
+                                                                </Style.Triggers>
+                                                            </Style>
+                                                        </TextBlock.Style>
+                                                    </TextBlock>
+                                                </StackPanel>
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                </ListView>
+                            </Grid>
+                            <Grid Grid.Column="1">
+                                <StackPanel Margin="3" VerticalAlignment="Center">
+                                    <Button Margin="3" ToolTip="编辑行...">
+                                        <visualIcon:Icon Type="Edit" Margin="3"/>
+                                    </Button>
+                                    <Button Margin="3" ToolTip="删除行">
+                                        <visualIcon:Icon Type="Close" Margin="3"/>
+                                    </Button>
+                                </StackPanel>
+                            </Grid>
                         </Grid>
                     </Grid>
                 </DataTemplate>
